# home

./: .bashrc-cygwin  .emacs  Romania’s presidential poll offers hope for more tolerant future - FT.com.html  commands.txt  crt-hacks.txt  crt-notes.txt  debian-install.txt  emacs.txt  other-notes.txt  qtcreator-emacs.kms  tmp.txt  windows-install.txt
algorithms/: inssort.cpp  (+6 more)
cpp11/: CMakeLists.txt  build-all.sh  decltype-retvalsyntax.cpp  features.cpp  lambda-complex.cpp  lambda.cpp  map.cpp  perfect-forwarding.cpp  shared_ptr.cpp  unique_ptr.cpp  unsolved.txt
cpp11/boost/: CMakeLists.txt  asio-bind-this.cpp  asio-bind.cpp  asio-timer.cpp  bind.cpp  dir-iteration.cpp  echo-server-stackful-coroutines.cpp  file-size.cpp  sync-tcp-dt-client-cal.py  sync-tcp-dt-client-call.py  sync-tcp-dt-client-call.sh  sync-tcp-dt-client.cpp  sync-tcp-dt-server.cpp
cpp11/distr-ip/: CMakeLists.txt  Readme-trimmed.txt  TGA-deprecated.cpp  TGA.cpp  TGA.h  definitions.h  distr-ip.h  entire-file-api.cpp  entrypoint_client.h  entrypoint_server.h  example-server.cpp  example-server2.cpp  fs-ops.cpp  global_defines.h  main.cpp  make-sln.txt  worker-client.cpp
cpp11/distr-ip/jni/: Android.mk  Application.mk
posix/client-server/: CMakeLists.txt  common.h  compile_script.sh  server.c
qt/minimal/: CMakeLists.txt  Main.cpp  Main.h
qt/qtgo/: AndroidSpecificSetup.cmake  CMakeLists.txt  README.txt  copy-pc-executables.sh
qt/qtgo/freego/: AIThread.cpp  AIThread.h  AboutDialog.qml  CMakeLists.txt  ConfirmMoveDialog.cpp  ConfirmMoveDialog.ui  Constants.h  DrawAreaWidget.cpp  DrawAreaWidget.h  Example.qml  GameControlWidget.cpp  GameControlWidget.h  GameControlWidget.ui  GameSettings.cpp  GameSettings.h  GameStruct.cpp  GameStruct.h  Global.h  GoTable.cpp  GoTable.h  GoTablePaint.cpp  GoTableWidget.cpp  GoTableWidget.h  Handicap.cpp  Handicap.ui  HandicapDialog.h  HelpDialog.cpp  HelpDialog.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MiniGameControlWidget.cpp  MiniGameControlWidget.h  MiniGameSettings.h  PlayerWidget.cpp  PlayerWidget.h  RoundInfo.cpp  RoundInfo.h  (+20 more)
qt/qtgo/freego/android/: AndroidManifest.xml  CMakeLists.txt
qt/qtgo/freego/btchat/: chat.cpp  chat.h  chat.ui  chatclient.cpp  chatserver.h  remoteselector.cpp  remoteselector.h
qt/qtgo/freego/bugs/: crashgame-FreeGoSave.json
qt/qtgo/freego/dialogs/: AddressDialog.cpp  AddressDialog.h  AddressDialog.ui  CMakeLists.txt  GameChooser.cpp  GameChooser.h  GameInvitation.cpp  GameInvitation.h  GameInvitation.ui
qt/qtgo/freego/licenses/: CC Attribution 3.0 Unported.html
qt/qtgo/freego/network/: BTClient.cpp  BTClient.h  BTErrorDialog.h  BTErrorDialog.ui  BTServer.cpp  CMakeLists.txt  ConnMan.cpp  ConnMan.h  PeerChooser.cpp  PeerChooser.h  PeerSelectionDialog.cpp  PeerSelectionDialog.h  PeerWidget.cpp  PeerWidget.ui  Proto.cpp  ProtoJson.cpp  ProtoJson.h  ProtoStructs.h
qt/qtgo/freego/notifications/: DockedNotif.h  DockedNotif.ui
qt/qtgo/gnugo/: #ChangeLog#  CMakeLists.txt  GNUGo.cbp  cmake_install.cmake  config.h
qt/qtgo/gnugo-lib/: CMakeCache.txt  CMakeLists.txt.bak
qt/qtgo/gnugo-lib/engine/: aftermath.c  board.c  board.h  boardlib.c  breakin.c  cache.c  cache.h  clock.c  clock.h  combination.c  dragon.c  endgame.c  filllib.c  fuseki.c  genmove.c  globals.c  gnugo.h  handicap.c  hash.c  hash.h  influence.c  influence.h  interface.c  liberty.h  matchpat.c  montecarlo.c  move_reasons.c  move_reasons.h  optics.c  oracle.c  owl.c  persistent.c  printutils.c  readconnect.c  readconnect.h  reading.c  semeai.c  sgfdecide.c  sgffile.c  shapes.c  (+6 more)
qt/qtgo/gnugo-lib/interface/: CMakeLists.txt  gmp.c  gtp.c  gtp.h  interface.h  main.c  play_ascii.c  play_gmp.c  play_gtp.c  play_solo.c  play_test.c
qt/qtgo/gnugo-lib/patterns/: CMakeLists.txt  attack.db  cmake_install.cmake  compress_fuseki  conn.db  connections.c  extract_fuseki.c  helpers.c  joseki.c  mkmcpat.c  mkpat.c  owl_defendpats.db  patterns.h  uncompress_fuseki.c
qt/qtgo/gnugo-lib/regression/: #view.pike#
qt/qtgo/gnugo-lib/sgf/: sgfnode.c  sgftree.c  sgftree.h
qt/qtgo/gnugo-lib/utils/: cmake_install.cmake  gg_utils.c  gg_utils.h
qt/qtgo/gnugo/engine/: board.c  board.h  cache.h  cmake_install.cmake  dragon.c  genmove.c  gnugo.h  hash.h  liberty.h  move_reasons.h  value_moves.c
qt/qtgo/gnugo/interface/: cmake_install.cmake  gmp.h
qt/qtgo/gnugo/patterns/: CMakeLists.txt  patterns.h
qt/qtgo/gnugo/sgf/: cmake_install.cmake  sgfnode.c  sgftree.h
qt/qtgo/qtcurve/: CMakeLists.txt
qt/qtgo/qtcurve/gtk2/common/: common.cpp
qt/qtgo/qtcurve/gtk2/style/: window.h
qt/qtgo/qtcurve/lib/: CMakeLists.txt
qt/qtgo/qtcurve/lib/utils/: CMakeLists.txt  dirs.cpp  gtkprops.h  process.cpp  timer.cpp
qt/qtgo/qtcurve/qt5/: CMakeLists.txt
qt/qtgo/qtgo/: AboutDialog.cpp  AboutDialog.h  AboutDialog.qml  AndroidManifest.xml  BusyDialog.cpp  BusyDialog.h  BusyDialog.ui  CMakeLists.txt  ConfirmMoveDialog.cpp  ConfirmMoveDialog.h  ConfirmMoveDialog.ui  DebugStuff.cpp  DebugStuff.h  DrawAreaWidget.cpp  DrawAreaWidget.h  Example.qml  GameEndDialog.cpp  GameEndDialog.h  GameEndDialog.ui  GameSetting.ui  GameSettings.cpp  GameSettings.h  GameSettings.ui  GameStruct.cpp  GameStruct.h  Global.cpp  Global.h  GoTable.cpp  GoTable.h  Handicap.cpp  Handicap.h  HandicapDialog.cpp  HandicapDialog.h  HandicapDialog.ui  HandicapSettings.cpp  HandicapSettings.h  HandicapSettings.ui  HelpDialog.cpp  Logger.cpp  Logger.h  (+31 more)
qt/qtgo/qtgo/android/: AndroidManifest.xml
qt/qtgo/qtgo/btchat/: CMakeLists.txt  chat.cpp  chat.h  chatclient.h  chatserver.cpp  remoteselector.h
qt/qtgo/qtgo/dialogs/: CMakeLists.txt  GameChooser.ui
qt/qtgo/qtgo/network/: BTClient.cpp  BTClient.h  BTErrorDialog.cpp  BTServer.cpp  BTServer.h  CMakeLists.txt  ConnMan.cpp  ConnMan.h  PeerChooser.cpp  PeerChooser.h  PeerChooser.ui  PeerSelectionDialog.cpp  PeerSelectionDialog.ui  PeerWidget.cpp  PeerWidget.h  PeerWidget.ui  Proto.cpp  ProtoJson.cpp  ProtoJson.h  ProtoStructs.h  json-protocol.txt
qt/qtgo/qtgo/notifications/: CMakeLists.txt  DockedNotif.cpp  DockedNotif.h
qt/qtgo/qtgo/resources/: README.txt
(+253 files in other folders)
